Added image upload to charities; single image helper now.